--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5",
     "webpack-merge": "^4.1.4",
-    "webpack-node-externals": "^1.7.2",
+    "webpack-node-externals": "^1.7.2"
   },
   "devDependencies": {
     "eslint-config-airbnb-base": "^13.1.0",
